# ansifier

./: .gitignore  .image_printer_go_brrr.py.swp  Dockerfile  Makefile  README.md  __init__.py  analyzeperf.py  ansifier.py  conftest.py  dev_requirements.txt  image_printer_go_brrr.py  image_printer_go_brrr_prethumbnail.py  img.txt  makefile  meofetch.py  perftest.py  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  requirements_dev.txt  test.txt
.github/: CODEOWNERS
ansifier/: __init__.py  __main__.py  ansifier.py  ansifiers.py  ansify.py  cli.py  config.py  image_printer.py  input_formats.py  meofetch.py  output_formats.py
src/: config.py  image_printer.py
src/ansifier/: ansifiers.py  ansify.py  cli.py  config.py
tests/: __init__.py  expected.html  expected.txt  expected_16color.txt  expected_256color.txt  expected_center_both.txt  expected_center_horizontally.txt  expected_center_vertically.txt  expected_mp4.txt  expected_truecolor.txt  template_cli.py  template_io.py  test_ansi.py  test_charsets.py  test_cli.py  test_consumable.py  test_html.py  test_logging.py  test_misuse.py  test_output_dimensions.py  test_save_to_file.py  test_stdout.py  test_video.py
tests/cli/: test_centering.py
